--- a/kazan2009/sources/vip.cfg
+++ b/kazan2009/sources/vip.cfg
@@ -23,6 +23,7 @@ Build=On
 Full=On
 
 
+IncludesPath=src\szmn_common
 !IncludesPath=src\check;src\uks;src\inc;D:\_Install\Gal810.src\CompSrc\L\L_UksPlans\VIP
 IncludesPath=D:\_Install\Gal810.src\CompSrc\F\F_GetAn\Vip
 !IncludesPath=src\form741
