--- a/kazan2009/sources/vip.cfg
+++ b/kazan2009/sources/vip.cfg
@@ -18,9 +18,12 @@ IncludesPath=src\check;src\inc;src\algo.inc
 OutputResourceName=%ApiOutFile%
 ErrorLevel=0
 
-Make=On
+!Make=On
 Build=On
 Full=On
+
+MinVisual=On
+WriteDebugInfo=On
 
 
 IncludesPath=src\szmn_common
@@ -54,6 +57,8 @@ OpenResources=%ApiExePath%\L_PrnSopr.res
 OpenResources=%ApiExePath%\L_BaseDoc.res
 OpenResources=%ApiExePath%\L_SF.res
 OpenResources=%ApiExePath%\g_Fin.res;
+OpenResources=%ApiExePath%\F_FPCATALOG.res;
+OpenResources=%ApiExePath%\F_FPBUDGET.res;
 
 [Login]
 !UserName=supervisor
