--- a/kazan2009/sources/vip.cfg
+++ b/kazan2009/sources/vip.cfg
@@ -63,3 +63,8 @@ OpenResources=%ApiExePath%\F_FPBUDGET.res;
 [Login]
 !UserName=supervisor
 !Password=fallout
+
+[Vip]
+Debug=On
+LocalDebug=On
+NoTablesInComponent=On
