--- a/kazan2009/sources/vip.cfg
+++ b/kazan2009/sources/vip.cfg
@@ -59,7 +59,8 @@ OpenResources=%ApiExePath%\L_SF.res
 OpenResources=%ApiExePath%\g_Fin.res;
 OpenResources=%ApiExePath%\F_FPCATALOG.res;
 OpenResources=%ApiExePath%\F_FPBUDGET.res;
-
+OpenResources=%ApiExePath%\L_UKSPLANS.RES;
+OpenResources=%ApiExePath%\C_COMMON.RES;
 [Login]
 !UserName=supervisor
 !Password=fallout
