--- a/kazan2009/sources/vip.cfg
+++ b/kazan2009/sources/vip.cfg
@@ -61,6 +61,8 @@ OpenResources=%ApiExePath%\F_FPCATALOG.res;
 OpenResources=%ApiExePath%\F_FPBUDGET.res;
 OpenResources=%ApiExePath%\L_UKSPLANS.RES;
 OpenResources=%ApiExePath%\C_COMMON.RES;
+OpenResources=%ApiExePath%\F_USERREPORT.RES;
+OpenResources=%ApiExePath%\Z_KATPODR.RES;
 [Login]
 !UserName=supervisor
 !Password=fallout
